# pastel2d

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  libpastel2d.mri
example/: example-cc.cc  example.c  example.cc  main.cc
old/: CMakeLists.txt
old/example/: example-shadow.tileset.lua  example.tileset.lua  main.cc
old/src/: graphics.cc  graphics.hh  pastel2d.hh  resourcemanager.cc  scene.hh
src/: align.h  audio.c  audio.h  context.c  context.h  error.c  error.h  graphics.c  graphics.cc  graphics.h  graphics.hh  imagemanipulation.cc  imagemanipulation.hh  manip.c  manip.h  passert.c  passert.h  pastel2d-cc.cc  pastel2d.c  pastel2d.cc  pastel2d.h  pastel2d.hh  res.c  res.h  resourcemanager.cc  resourcemanager.hh  scene.c  scene.h  scene.hh  textcache.c  textcache.cc  textcache.h  textcache.hh
src/private/: audio_priv.h  graphics_priv.h  res_priv.h  scene_priv.h  textcache.c
src/util/: noncopyable.hh  time.hh
